packages/taquito-michel-codec/test/contracts_012/ill_typed/comb1.tz
parameter unit;
storage unit;
code { PAIR 1 }
